--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
 		    <td><%= product.name %></td>
 		    <td><%= product.price %></td>
 	    	<td><%= image_tag product.image.url(:thumb) %></td>	
-	    	<td><%= link_to 'available', products_new_path(product) %></td>
+	    	<td><%= link_to 'available`', products_new_path(product) %></td>
 	      	<td><%= link_to 'Edit', products_new_path(product) %></td>
 	      	<td><%= link_to 'Delete', products_new_path(product),
               method: :delete,
