--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@category) do |f| %>
+<%= form_for :category, url: categories_path do |f| %>
  
   <% if @category.errors.any? %>
     <div id="error_explanation">
@@ -12,13 +12,12 @@
         <% end %>
       </ul>
     </div>
-    
-<% end %>
+  <% end %>
 
 
 <h1>Add Category</h1>
 
-<%= form_for :category, url: categories_path do |f| %>
+
 
 <div>
   
@@ -46,3 +45,5 @@
 </div>
 
 <% end %>
+
+<%= link_to 'Back', new_product_path %>
