user list,edit and delete are done

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -62,7 +62,7 @@
  
   <tr>
     <td>
-      <%= f.submit :'Save' %>
+      <%= f.submit %>
     </td>
     <td>
       <%= f.button :Reset, :type=>"reset" %>
