bootstrap and style added

--- a/app/views/layouts/users_header.html.erb
+++ b/app/views/layouts/users_header.html.erb
@@ -1,3 +1,13 @@
+  <!DOCTYPE html>
+<html>
+  <head>
+    <title>Cafeteria</title>
+    <%= csrf_meta_tags %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
+
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
@@ -13,3 +23,4 @@
       <%= yield %>
     </div>
   </body>
+  </html>
