--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+ /*= require_tree .*/
+
+
+//Import bootstrap-sprockets
+@import "bootstrap-sprockets"
+
+// Import cerulean variables
+@import "bootswatch/readable/variables"
+
+// Then bootstrap itself
+@import "bootstrap"
+
+// And finally bootswatch style itself
+@import "bootswatch/readable/bootswatch"
+
+@import "layout.css.scss"
