--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -1,8 +1,18 @@
+  <!DOCTYPE html>
+<html>
+  <head>
+    <title>Cafeteria</title>
+    <%= csrf_meta_tags %>
+
+    <%= stylesheet_link_tag    'application', media: 'all'%>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
+  </head>
+
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <nav>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="navbar-brand navbar-nav navbar-right">
             <%= link_to "Home",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
             <%= link_to "Products",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
             <%= link_to "Users",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
@@ -16,3 +26,4 @@
       <%= yield %>
     </div>
   </body>
+  </html>
