--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -12,7 +12,7 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <nav>
-          <ul class="navbar-brand navbar-nav navbar-right">
+          <ul class="navbar-brand navbar-nav navbar-left">
             <%= link_to "Home",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
             <%= link_to "Products",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
             <%= link_to "Users",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
