modify admin layout

--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -14,8 +14,8 @@
         <nav>
           <ul class="navbar-brand navbar-nav navbar-left">
             <%= link_to "Home",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-            <%= link_to "Products",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-            <%= link_to "Users",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+            <%= link_to "Products",   products_path %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+            <%= link_to "Users",   users_path %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
             <%= link_to "Manual Order",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
             <%= link_to "Checks",   '#' %>
           </ul>
