--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -12,6 +12,7 @@
       <a href="#" id="sub">-</a>
       * product.price EPG
   </span> -->
+  <div id="items" ></div>
 <%= f.label :NOTES %></br>
 <%= f.text_area :name, size: "10x5" %></br>
 <%= f.label :Room %>
@@ -32,13 +33,13 @@
   <span>
   <table style="display: inline">
   <tr>
-  <td><%= image_tag product.image.url(:thumb), :class => "allProducts", :id => product.id %></td>
+  <td><%= image_tag product.image.url(:thumb), :class => "allProducts", :id => product.id, :alt => product.price %></td>
   </tr>
   <tr>
-  <td style="text-align: center"><%= product.name %></td>
+  <td id="name_<%= product.id %>" style="text-align: center"><%= product.name %></td>
   </tr>
    <tr>
-  <td ><p id="msg"></p></td>
+  <td ><p id="msg_<%= product.id %>" ></p></td>
   </tr>
   </table>
   </span>
