--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -13,11 +13,24 @@
       <div class="container">
         <nav>
           <ul class="navbar-brand navbar-nav navbar-left">
-            <%= link_to "Home",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-            <%= link_to "Products",   products_path %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-            <%= link_to "Users",   users_path %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-            <%= link_to "Manual Order",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-            <%= link_to "Checks",   '#' %>
+          <!-- TODO add check for admin or normal user -->
+            <% if logged_in?  %>
+              <% if @current_user.id == 1%>
+                <%= link_to "Home",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <%= link_to "Products",   products_path %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <%= link_to "Users",   users_path %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <%= link_to "Manual Order",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <%= link_to "Checks",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+              <% else %>
+                <%= link_to "Home",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <%= link_to "My Orders",   '#' %>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+              <% end %>
+              <%= link_to 'Logout', logout_path %>  
+            <% else %>  
+                <!-- TODO  -->
+                    
+              <% end %>
+
           </ul>
         </nav>
       </div>
