--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -2,18 +2,31 @@
 <%= form_for (:order), html: { multipart: true } do |f| %>
 </br>
 </br>
-<div id="search">
-  
+<div id="search_div">
+  <input type="search" id="search" placeholder="Search" name="" onkeyup="myFunction()>
+  <table>
+<tr>
+  <% @product.each do |product| %>
+  <span>
+  <table style="display: none">
+  <tr>
+  <td><%= image_tag product.image.url(:thumb), :class => "allProducts", :id => product.id, :alt => product.price %></td>
+  </tr>
+  <tr>
+  <td id="name_<%= product.id %>" class="name" style="text-align: center"><%= product.name %></td>
+  </tr>
+   <tr>
+  <td ><p id="msg_<%= product.id %>" ></p></td>
+  </tr>
+  </table>
+  </span>
+  <% end %>
 </div>
 
 <div id="order" style="display: inline">
-<!--  <span>
-       productname
-      <a href="#" id="add">+</a>
-      <a href="#" id="sub">-</a>
-      * product.price EPG
-  </span> -->
+
   <div id="items" ></div>
+
 <%= f.label :NOTES %></br>
 <%= f.text_area :notes, size: "10x5" %></br>
 <%= f.label :Room %>
