--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -19,10 +19,10 @@
                 <%= link_to "Home",   '#' %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <%= link_to "Products",   products_path %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <%= link_to "Users",   users_path %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-                <%= link_to "Manual Order",   orders_path %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <%= link_to "Manual Order",   orders_new_path %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <%= link_to "Checks",   '#' %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
               <% else %>
-                <%= link_to "Home",   orders_path %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <%= link_to "Home",   orders_new_path %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <%= link_to "My Orders",   '#' %> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
               <% end %>
               <%= link_to 'Logout', logout_path %>  
