--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -27,12 +27,16 @@
                 <a href="/orders/new" onclick="document.location='/orders/new'">My Orders</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 
               <% end %>
-              <%= link_to 'Logout', logout_path %>  
+              <%= link_to 'Logout', logout_path %> 
             <% else %>  
                 <!-- TODO  -->
                     
               <% end %>
 
+          </ul>
+          <ul class="navbar-brand navbar-nav navbar-right">
+            <%= image_tag('userIcon.png', :size => '48x48', :style => 'display: inline')%>
+            <%= @current_user.name %>
           </ul>
         </nav>
       </div>
