--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,50 +1,52 @@
 <p id="notice"><%= notice %></p>  
 <%= form_for (:order), html: { multipart: true } do |f| %>
-</br>
-</br>
+  <br/>
+  <br/>
+  <div id="search_div" style="float:right">
+    <input type="search" id="search" placeholder="Search" name="" class="form-control">
+  </div>
+  <div class="container navbar navbar-brand">
+    <% if @current_user.id == 1%>
+    <% end %>
+    <div id="order" class="col-sm-3" style="display: inline; border: 1px solid #eee; box-shadow: 2px 2px 5px #ddd; border-radius: 5px; padding: 15px; background-color: #fafafa">
 
-<div id="search_div">
-  <input type="search" id="search" placeholder="Search" name="" >
-</div>
-<% if @current_user.id == 1%>
-  <%= f.collection_select(:user_id, User.all(), :id, :name) %>
-<% end %>
-<div id="order" style="display: inline">
+      <div id="items" ></div>
 
-  <div id="items" ></div>
+      <%= f.label :NOTES %><br/>
+      <%= f.text_area :notes, size: "10x5", :class => "form-control" %><br/>
+      <%= f.label :Room %>
+      <%= f.collection_select(:room, User.uniq.pluck(:room), :to_s, :to_s, {}, {class: "form-control"}) %>
+      <br/>-------------------------------------<br/>
+      <p id="total">EPG</p>
+      <%= f.submit "Save", :id=> "save_order", :class => "btn btn-primary" %>
+    </div>
+    <div class="col-sm-9">
+      <%= f.collection_select(:user_id, User.where.not(id: 1), :id, :name, {}, {class: "form-control"}) %>
+    <div id="latest_order">
+        
+    </div>
 
-<%= f.label :NOTES %></br>
-<%= f.text_area :notes, size: "10x5" %></br>
-<%= f.label :Room %>
-<%= f.collection_select(:room, User.uniq.pluck(:room), :to_s, :to_s) %>
-</br>-------------------------------------</br>
-<p id="total">EPG</p>
-<%= f.submit "Save", :id=> "save_order" %>
-
-<div id="latest_order">
-  
-</div>
-
-<div id="list_products">
-<table>
-<tr>
-  <% @product.each do |product| %>
-  <span>
-  <table style="display: inline">
-  <tr>
-  <td><%= image_tag product.image.url(:thumb), :class => "allProducts", :id => product.id, :alt => product.price %></td>
-  </tr>
-  <tr>
-  <td id="name_<%= product.id %>" style="text-align: center"><%= product.name %></td>
-  </tr>
-   <tr>
-  <td ><p id="msg_<%= product.id %>" ></p></td>
-  </tr>
-  </table>
-  </span>
-  <% end %>
-
-
-</div>
+    <div id="list_products" >
+      <table>
+        <tr>
+          <% @product.each do |product| %>
+          <span>
+            <table style="display: inline">
+              <tr>
+                <td><%= image_tag product.image.url(:thumb), :class => "allProducts", :id => product.id, :alt => product.price %></td>
+              </tr>
+              <tr>
+                <td id="name_<%= product.id %>" style="text-align: center"><%= product.name %></td>
+              </tr>
+              <tr>
+                <td ><p id="msg_<%= product.id %>" ></p></td>
+              </tr>
+            </table>
+          </span>
+          <% end %>
+        </tr>
+      </table>
+    </div>
+  </div>
 
 <% end %>
