--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add User</h1>
+<div class="nav navbar">
+<h1 class="nav navbar">Add User</h1>
 <%= render 'form' %>
 <%= link_to 'Back', users_path %>
+</div>
