modify admin home page link modify select list at admin order

--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -16,7 +16,7 @@
           <!-- TODO add check for admin or normal user -->
             <% if logged_in?  %>
               <% if @current_user.id == 1%>
-                <a href="/orders/new" onclick="document.location='/orders/new'">Home</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <a href="/orders" onclick="document.location='/orders'">Home</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <a href="/products" onclick="document.location='/products'">Products</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <a href="/users" onclick="document.location='/users'">Users</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <a href="/orders/new" onclick="document.location='/orders/new'">Manual Order</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
