--- a/app/views/orders/list.html.erb
+++ b/app/views/orders/list.html.erb
@@ -1,3 +1,4 @@
+<% if @current_user.id == 1%>
 <h1>Orders</h1>
 <table>
   <tr>
@@ -6,15 +7,18 @@
     <th>Room</th>
     <th>Ext.</th>
     <th>Actions</th>
+  </tr>
     <% @orderdata.each do |orderdata| %>
-	    </tr>
+	   <tr id=<%= orderdata["oid"] %> class="order_tr">
 		    <td><%= orderdata["odate"] %></td>
 		    <td><%= orderdata["uname"] %></td>
 	    	<td><%= orderdata["uroom"] %></td>
 	    	<td><%= orderdata["uext"] %></td>	
 	      <td><%= link_to "Deliver", {:controller => "orders", :action => "deliver", :oid =>  orderdata["oid"]},method: :post %></td>
-
-    </tr>
 	  	</tr>	
 	<% end %>
 </table>
+<% else %>
+<h1>You are not Authorized !!</h1>
+
+<% end %>
