add restrict to normal user

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,3 +1,4 @@
+<% if @current_user.id != 1%>
 <%= form_for :category, url: categories_path do |f| %>
  
   <% if @category.errors.any? %>
@@ -48,3 +49,7 @@
 
 <%= link_to 'Back', new_product_path %>
 </div>
+<% else %>
+<h1>You are not Authorized !!</h1>
+
+<% end %>
