--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<% if @current_user.id == 1%>
 <h1>ALL Users</h1>
  <div class="container text-justify navbar">
 <%= link_to 'Add user', new_user_path %>
@@ -25,3 +26,7 @@
 </div>
 	<%= will_paginate @user %>
 	
+<% else %>
+<h1>You are not Authorized !!</h1>
+
+<% end %>
