--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
-<% if @current_user.id != 1%>
+<% if @current_user.id == 1%>
 <%= form_for :category, url: categories_path do |f| %>
  
   <% if @category.errors.any? %>
