--- a/app/views/orders/list.html.erb
+++ b/app/views/orders/list.html.erb
@@ -14,9 +14,9 @@
 		    <td><%= orderdata["uname"] %></td>
 	    	<td><%= orderdata["uroom"] %></td>
 	    	<td><%= orderdata["uext"] %></td>	
-	    	<% if orderdata["ostatus"] ==  "deliver" %>
+	    	<% if orderdata["ostatus"] ==  "Processing" %>
 	     		 <td><%= link_to "Deliver", {:controller => "orders", :action => "deliver", :oid =>  orderdata["oid"]},method: :post, :onclick => '$(this).text("Out for delivery");' %></td>
-	     	<% else %>
+	     	<% else %>	
 	     		<td>Out for delivery</td>
 	     	<% end %>
 	  	</tr>	
