--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,9 +16,11 @@
 	    	<td><%= image_tag user.image.url(:thumb) %></td>
 	    	<td><%= user.ext_room %></td>	
 	      	<td><%= link_to 'Edit', edit_user_path(user) %></td>
+	      	<% if(user.id !=1) %>
 	      	 <td><%= link_to 'Delete', user_path(user),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
+              <% end %>
     </tr>
 	  	</tr>	
 	<% end %>
