add user myorder page Still modified

--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -24,7 +24,7 @@
                 
               <% else %>
                 <a href="/orders/new" onclick="document.location='/orders/new'">Home</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-                <a href="/orders/new" onclick="document.location='/orders/new'">My Orders</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <a href="/orders" onclick="document.location='/orders'">My Orders</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 
               <% end %>
               <%= link_to 'Logout', logout_path %> 
