--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
 		    <td><%= product.price %></td>
 	    	<td><%= image_tag product.image.url(:thumb) %></td>
 	    	<% if product.status %>
-	    		<td><%= link_to "Available", {:controller => "products", :action => "changestatus", :pid =>  product.id},method: :post,:onclick => '$(this).text("Unvailable")' %></td>
+	    		<td><%= link_to "Available", {:controller => "products", :action => "changestatus", :pid =>  product.id},method: :post,:onclick => 'if($(this).text()){("Unvailable")}' %></td>
 	    	<% else %>
 	    		<td><%= link_to "Unvailable", {:controller => "products", :action => "changestatus", :pid =>  product.id},method: :post, :onclick => '$(this).text("Available")'%></td>
 	    	<% end %>
