--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -15,7 +15,7 @@
       <%= f.label :NOTES %><br/>
       <%= f.text_area :notes, size: "10x5", :class => "form-control" %><br/>
       <%= f.label :Room %>
-      <%= f.collection_select(:room, User.uniq.pluck(:room), :to_s, :to_s, {}, {class: "form-control"}) %>
+      <%= f.collection_select(:room ,User.uniq.pluck(:room), :to_s, :to_s, {}, {class: "form-control"}) %>
       <br/>-------------------------------------<br/>
       <p id="total">EPG</p>
       <%= f.submit "Save", :id=> "save_order", :class => "btn btn-primary" %>
@@ -31,12 +31,12 @@
         <tr>
           <% @product.each do |product| %>
           <span>
-            <table style="display: inline">
+            <table id="<%= product.id %>_span" style="display: inline;" class="products_span">
               <tr>
                 <td><%= image_tag product.image.url(:thumb), :class => "allProducts", :id => product.id, :alt => product.price %></td>
               </tr>
               <tr>
-                <td id="name_<%= product.id %>" style="text-align: center"><%= product.name %></td>
+                <td id="name_<%= product.id %>" class="name" style="text-align: center"><%= product.name %></td>
               </tr>
               <tr>
                 <td ><p id="msg_<%= product.id %>" ></p></td>
