--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,9 +14,9 @@
 		    <td><%= product.price %></td>
 	    	<td><%= image_tag product.image.url(:thumb) %></td>
 	    	<% if product.status %>
-	    		<td><%= link_to "Available", {:controller => "products", :action => "changestatus", :pid =>  product.id},method: :post,:onclick => 'if($(this).text()=="Available"){$(this).text("Unvailable")}else{$(this).text("Available"))}' %></td>
+	    		<td><%= link_to "Available", {:controller => "products", :action => "changestatus", :pid =>  product.id},method: :post, :class => "status"%></td>
 	    	<% else %>
-	    		<td><%= link_to "Unvailable", {:controller => "products", :action => "changestatus", :pid =>  product.id},method: :post, :onclick => '$(this).text("Available")'%></td>
+	    		<td><%= link_to "Unvailable", {:controller => "products", :action => "changestatus", :pid =>  product.id},method: :post, :class => "status"%></td>
 	    	<% end %>
 	      	<td><%= link_to 'Edit',edit_product_path(product) %></td>
 	      	<td><%= link_to 'Delete', product_path(product),
