--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -24,9 +24,23 @@
     <div class="col-sm-9">
       <%= f.collection_select(:user_id, User.where.not(id: 1), :id, :name, {}, {class: "form-control"}) %>
     <% end %>
+    <% if @current_user.id != 1%>
     <div id="latest_order">
-
+    <% @lorderdata.each do |lastorder| %>
+      <span>
+            <table style="display: inline;" class="products_span">
+              <tr>
+                <td><%= image_tag lastorder['pimg'] %></td>
+              </tr>
+              <tr>
+                <td class="name" style="text-align: center"><%= lastorder['pname'] %></td>
+              </tr>
+            </table>
+          </span>
+    <% end %>
     </div>
+    <p>--------------------------------------</p>
+    <% end %>
 
     <div id="list_products" >
       <table>
