admin home page styled

--- a/app/views/orders/list.html.erb
+++ b/app/views/orders/list.html.erb
@@ -1,6 +1,6 @@
 <% if @current_user.id == 1%>
 <h1>Orders</h1>
-<table>
+<table class="table nav navbar">
   <tr>
     <th>Order Date</th>
     <th>Name</th>
