add checks page

--- a/app/views/layouts/admin_header.html.erb
+++ b/app/views/layouts/admin_header.html.erb
@@ -20,7 +20,7 @@
                 <a href="/products" onclick="document.location='/products'">Products</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <a href="/users" onclick="document.location='/users'">Users</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 <a href="/orders/new" onclick="document.location='/orders/new'">Manual Order</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
-                <a href="#" onclick="document.location='#'">Checks</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+                <a href="/orders/checks" onclick="document.location='/orders/checks'">Checks</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
                 
               <% else %>
                 <a href="/orders/new" onclick="document.location='/orders/new'">Home</a> &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
