--- a/app/views/orders/checks.html.erb
+++ b/app/views/orders/checks.html.erb
@@ -1,6 +1,10 @@
 <% if @current_user.id == 1%>
 <h1>Checks</h1>
 
+<%= form_tag orders_userfilter_path do %>
+	<%= collection_select(:user,:id, User.where.not(id: 1), :id, :name, {}, {class: "form-control"}) %>
+	<%= submit_tag 'Filter' , class: "btn btn-primary" , style:"margin: 10px;"%>
+<% end %>
 <table>
   <tr>
     <th>User Name</th>
