--- a/app/views/orders/checks.html.erb
+++ b/app/views/orders/checks.html.erb
@@ -5,7 +5,7 @@
 	<%= collection_select(:user,:id, User.where.not(id: 1), :id, :name, {}, {class: "form-control"}) %>
 	<%= submit_tag 'Filter' , class: "btn btn-primary" , style:"margin: 10px;"%>
 <% end %>
-<table>
+<table class="table nav navbar">
   <tr>
     <th>User Name</th>
     <th>Amount</th>	
